--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,39 @@
-pytest~=7.1.1
-selenium~=4.1.3
-webdriver_manager
-Faker~=13.3.4
+async-generator==1.10
+atomicwrites==1.4.0
+attrs==21.4.0
+black @ git+https://github.com/psf/black@96bd428524763fc443ac1729e7254ccbe872d5ca
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.1.2
+colorama==0.4.4
+cryptography==36.0.2
+Faker==13.3.4
+h11==0.13.0
+idna==3.3
+iniconfig==1.1.1
+mypy-extensions==0.4.3
+outcome==1.1.0
+packaging==21.3
+pathspec==0.9.0
+platformdirs==2.5.1
+pluggy==1.0.0
+py==1.11.0
+pycparser==2.21
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
+PySocks==1.7.1
+pytest==7.1.1
+python-dateutil==2.8.2
+requests==2.27.1
+selenium==4.1.3
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+tomli==2.0.1
+trio==0.20.0
+trio-websocket==0.9.2
+typing_extensions==4.1.1
+urllib3==1.26.9
+webdriver-manager==3.5.4
+wsproto==1.1.0
